feat: MapActivity 네이버맵 구현

--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryTextColor">#191F28</color>
+    <color name="secondaryTextColor">#333D4B</color>
+    <color name="thirdTextColor">#4E5968</color>
+    <color name="fourthTextColor">#505967</color>
+    <color name="fifthTextColor">#6B7684</color>
+    <color name="gray50">#BCBCBE</color>
+    <color name="bgPrimaryColor">#E6E6E7</color>
 </resources>
