--- a/presentation/src/main/res/layout/activity_map.xml
+++ b/presentation/src/main/res/layout/activity_map.xml
@@ -107,6 +107,9 @@
                                 android:layout_marginHorizontal="20dp"
                                 android:layout_marginTop="20dp"
                                 android:background="@drawable/bg_search_edit_text"
+                                android:clickable="true"
+                                android:focusable="false"
+                                android:fontFamily="@font/pretendard_medium"
                                 android:hint="어디에 주차하시나요?"
                                 android:maxLines="1"
                                 android:paddingStart="16dp"
@@ -154,6 +157,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="20dp"
                                 android:layout_marginTop="36dp"
+                                android:fontFamily="@font/pretendard_bold"
                                 android:text="자주 가는 주차장"
                                 android:textColor="@color/primaryTextColor"
                                 android:textSize="19sp"
@@ -172,6 +176,7 @@
                                 android:background="?attr/selectableItemBackgroundBorderless"
                                 android:clickable="true"
                                 android:focusable="true"
+                                android:fontFamily="@font/pretendard_medium"
                                 android:text="편집"
                                 android:textColor="@color/fifthTextColor"
                                 android:textSize="19sp"
