--- a/presentation/src/main/res/drawable/cursor_edit_text.xml
+++ b/presentation/src/main/res/drawable/cursor_edit_text.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <size android:width="2dp"/>
-    <solid android:color="#FFE146"/>
+    <size android:width="2dp" android:height="20dp"/>
+    <solid android:color="#3182F6"/>
 </shape>
