--- a/presentation/src/main/res/layout/activity_text_search.xml
+++ b/presentation/src/main/res/layout/activity_text_search.xml
@@ -10,7 +10,206 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".view.search.TextSearchActivity">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/back_btn"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="20dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/ic_back" />
+
+            <EditText
+                android:id="@+id/search_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="11dp"
+                android:background="@null"
+                android:fontFamily="@font/pretendard_medium"
+                android:hint="어디에 주차하시나요?"
+                android:imeOptions="actionSearch"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@color/secondaryTextColor"
+                android:textColorHint="@color/gray50"
+                android:textCursorDrawable="@drawable/cursor_edit_text"
+                android:textSize="22sp" />
+
+        </androidx.appcompat.widget.Toolbar>
+
+
+        <ScrollView
+            android:id="@+id/favorite_lot_scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="20dp"
+            android:overScrollMode="never"
+            android:scrollbars="none"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!-- 홈 -->
+                <LinearLayout
+                    android:id="@+id/favorite_home_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_favorite_lot"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingHorizontal="20dp"
+                    android:paddingVertical="11dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="18.6dp"
+                        android:src="@drawable/ic_home" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:text="집"
+                        android:textColor="@color/secondaryTextColor"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+
+                <!-- 회사 -->
+                <LinearLayout
+                    android:id="@+id/favorite_company_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:background="@drawable/bg_favorite_lot"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingHorizontal="20dp"
+                    android:paddingVertical="11dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/favorite_home_btn"
+                    app:layout_constraintLeft_toRightOf="@+id/favorite_home_btn"
+                    app:layout_constraintTop_toTopOf="@+id/favorite_home_btn">
+
+                    <ImageView
+                        android:layout_width="14dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/ic_company" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:text="회사"
+                        android:textColor="@color/secondaryTextColor"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+
+                <!-- 개인 즐겨찾기 리스트 -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/favorite_lot_rv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintBottom_toBottomOf="@+id/favorite_home_btn"
+                    app:layout_constraintStart_toEndOf="@+id/favorite_company_btn"
+                    app:layout_constraintTop_toTopOf="@+id/favorite_home_btn"
+                    tools:listitem="@layout/item_search_favorite_lot" />
+
+
+                <!-- 즐겨찾기 추가 버튼 -->
+                <LinearLayout
+                    android:id="@+id/favorite_add_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="26dp"
+                    android:background="@drawable/bg_favorite_lot"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingHorizontal="20dp"
+                    android:paddingVertical="11dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/favorite_home_btn"
+                    app:layout_constraintLeft_toRightOf="@+id/favorite_lot_rv"
+                    app:layout_constraintTop_toTopOf="@+id/favorite_home_btn">
+
+                    <ImageView
+                        android:layout_width="19dp"
+                        android:layout_height="19dp"
+                        android:src="@drawable/ic_white_add" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:text="즐겨찾기"
+                        android:textColor="@color/secondaryTextColor"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_marginTop="20dp"
+            android:background="#F0F0F0"
+            app:layout_constraintTop_toBottomOf="@+id/favorite_lot_scroll_view" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/history_rv"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider"
+            tools:listitem="@layout/item_search_history" />
+
+        <ProgressBar
+            android:id="@+id/loading_bar"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="100dp"
+            android:indeterminateTint="#3182F6"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/history_rv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/history_rv"
+            tools:visibility="visible"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
