--- a/presentation/src/main/res/layout/activity_voice_search.xml
+++ b/presentation/src/main/res/layout/activity_voice_search.xml
@@ -10,11 +10,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".view.search.VoiceSearchActivity">
 
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_layout"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             app:layout_constraintTop_toTopOf="parent">
@@ -44,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/borderGray"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 
         <TextView
@@ -58,7 +59,7 @@
             android:textColor="@color/primaryTextColor"
             android:textSize="26sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <TextView
             android:id="@+id/voice_sub_desc_tv"
@@ -78,9 +79,9 @@
             android:layout_width="match_parent"
             android:layout_height="582dp"
             android:scaleType="centerCrop"
+            android:translationY="130dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:lottie_autoPlay="true"
-            android:translationY="130dp"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/anim_yellow_wave" />
 
